--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "devDependencies": {
     "browser-sync": "~2.18.12",
     "del": "~3.0.0",
+    "events": "^1.1.1",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-changed": "~3.1.0",
     "gulp-clean-css": "^3.6.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^3.0.0",
+    "gulp-jshint": "^2.0.4",
     "gulp-minify": "0.0.14",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
@@ -32,7 +34,11 @@
     "gulp-uglify": "^3.0.0",
     "gulp-war": "^0.1.4",
     "gulp-zip": "^3.2.0",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
+    "map-stream": "0.0.7",
     "merge-stream": "^1.0.1",
+    "path": "^0.12.7",
     "require-directory": "^2.1.1",
     "superstatic": "~4.1.0",
     "yargs": "~4.8.1"
