--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stephanoapiolaza.me",
-  "version": "0.5.0",
+  "version": "0.8.1",
   "private": false,
   "license": "MIT",
   "author": "Stephano Apiolaza",
@@ -27,6 +27,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.6.0",
     "gulp-tslint": "^8.1.1",
