--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stephanoapiolaza.me",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "private": false,
   "license": "MIT",
   "author": "Stephano Apiolaza",
@@ -22,6 +22,7 @@
     "gulp-clean-css": "^3.6.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.3.0",
     "gulp-jshint": "^2.0.4",
     "gulp-minify": "0.0.14",
@@ -35,6 +36,7 @@
     "gulp-tslint": "^8.1.1",
     "gulp-typescript": "^3.1.7",
     "gulp-uglify": "^3.0.0",
+    "gulp-w3cjs": "^1.3.0",
     "gulp-war": "^0.1.4",
     "gulp-zip": "^3.2.0",
     "jshint": "^2.9.5",
@@ -44,6 +46,7 @@
     "path": "^0.12.7",
     "require-directory": "^2.1.1",
     "superstatic": "~4.1.0",
+    "through2": "^2.0.3",
     "yargs": "~4.8.1"
   }
 }
