--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stephanoapiolaza.me",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "private": false,
   "license": "MIT",
   "author": "Stephano Apiolaza",
@@ -18,6 +18,7 @@
     "del": "~3.0.0",
     "events": "^1.1.1",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-changed": "~3.1.0",
     "gulp-clean-css": "^3.6.0",
     "gulp-concat": "^2.6.1",
